--- a/Views/Movies/Index.cshtml
+++ b/Views/Movies/Index.cshtml
@@ -9,11 +9,11 @@
 <p>
     @Html.ActionLink("Create New", "Create")
 
-    @using (Html.BeginForm())
+    @using (Html.BeginForm("Index", "Movies", FormMethod.Get))
             {
                 <p> Title: @Html.TextBox("SearchString") <br/>
-                <input type="submit" value="Filter" />
-                    
+                    Genre: @Html.DropDownList("movieGenre", "All")
+                <input type="submit" value="Filter" />                   
                 </p>
             }
 </p>
